--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,5 +1,12 @@
+
 section{
     background-color: rgb(197, 191, 191);
+    width: 80%;
+}
+
+aside{
+    width: 20%;
+    padding: 10px;
 }
 
 .ms-card{
